Improve sonar coverage