@@ -11,6 +11,7 @@ import uk.gov.hmcts.reform.mi.miextractionservice.exception.ArchiveException;
 
 import java.io.File;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -66,7 +67,7 @@ class ArchiveComponentImplTest {
 
     @Test
     void givenNoFilesToZip_whenCreateEncryptedArchive_thenThrowArchiveException() {
-        assertThrows(ArchiveException.class, () -> underTest.createArchive(Collections.emptyList(), uniqueZipName),
+        assertThrows(ArchiveException.class, () -> underTest.createArchive(List.of(), uniqueZipName),
             "Expected exception was not thrown for missing files.");
     }
 }
