@@ -151,7 +151,7 @@ class CoreCaseDataCsvWriterComponentImplTest {
     void givenExceptionOnClose_whenWriteBeans_thenThrowParserException() throws Exception {
         doThrow(new IOException("Broken close")).when(csvWriter).close();
 
-        assertThrows(ParserException.class, () -> underTest.writeBeansWithWriter(writer, Collections.singletonList(TEST_OUTPUT_DATA)));
+        assertThrows(ParserException.class, () -> underTest.writeBeansWithWriter(writer, List.of(TEST_OUTPUT_DATA)));
 
         verify(writer, never()).flush();
     }
@@ -160,7 +160,7 @@ class CoreCaseDataCsvWriterComponentImplTest {
     void givenExceptionOnClose_whenWriteBeanToCsv_thenThrowParserException() throws Exception {
         doThrow(new IOException("Broken close")).when(bufferedWriter).close();
 
-        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, Collections.singletonList(TEST_OUTPUT_DATA)));
+        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, List.of(TEST_OUTPUT_DATA)));
 
         // One flush for write header and one flush for write line. Final flush for writer close not called due to exception.
         verify(writer, times(2)).flush();
@@ -182,7 +182,7 @@ class CoreCaseDataCsvWriterComponentImplTest {
         try (CSVWriterThrowExceptionStub csvWriterThrowsException = spy(new CSVWriterThrowExceptionStub(writer))) {
             when(writerWrapper.getCsvWriter(any())).thenReturn(csvWriterThrowsException);
 
-            assertThrows(RuntimeException.class, () -> underTest.writeBeansWithWriter(writer, Collections.singletonList(TEST_OUTPUT_DATA)));
+            assertThrows(RuntimeException.class, () -> underTest.writeBeansWithWriter(writer, List.of(TEST_OUTPUT_DATA)));
 
             verify(csvWriterThrowsException, times(1)).close();
         }
@@ -193,7 +193,7 @@ class CoreCaseDataCsvWriterComponentImplTest {
         try (CSVWriterThrowExceptionStub csvWriterThrowsException = spy(new CSVWriterThrowExceptionStub(writer))) {
             when(writerWrapper.getCsvWriter(any())).thenReturn(csvWriterThrowsException);
 
-            assertThrows(RuntimeException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, Collections.singletonList(TEST_OUTPUT_DATA)));
+            assertThrows(RuntimeException.class, () -> underTest.writeBeansAsCsvFile(uniqueFileName, List.of(TEST_OUTPUT_DATA)));
 
             verify(csvWriterThrowsException, times(1)).close();
         }
@@ -225,7 +225,7 @@ class CoreCaseDataCsvWriterComponentImplTest {
         when(writerWrapper.getCsvWriter(any())).thenCallRealMethod();
         when(writerWrapper.getBufferedWriter(any(Path.class))).thenCallRealMethod();
 
-        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile("/", Collections.emptyList()));
+        assertThrows(ParserException.class, () -> underTest.writeBeansAsCsvFile("/", List.of()));
     }
 
     private String wrapStringInQuotes(String inputString) {
