@@ -16,6 +16,7 @@ import uk.gov.hmcts.reform.mi.miextractionservice.exception.ParserException;
 import java.io.IOException;
 import java.io.Writer;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -45,17 +46,17 @@ class NotifyJsonlWriterComponentImplTest {
     private Writer writer;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         writer = mock(Writer.class);
     }
 
     @AfterEach
-    public void tearDown() throws Exception {
+    void tearDown() throws Exception {
         writer.close();
     }
 
     @Test
-    public void givenValidWriter_whenWriteBeans_thenLinesAreWritten() throws Exception {
+    void givenValidWriter_whenWriteBeans_thenLinesAreWritten() throws Exception {
         underTest.writeLinesAsJsonl(writer, Collections.singletonList(TEST_OUTPUT_DATA));
 
         verify(writer, times(1)).write(getExpectedDataString());
@@ -63,10 +64,10 @@ class NotifyJsonlWriterComponentImplTest {
     }
 
     @Test
-    public void givenExceptionOnClose_whenWriteBeans_thenThrowParserException() throws Exception {
+    void givenExceptionOnClose_whenWriteBeans_thenThrowParserException() throws Exception {
         doThrow(new IOException("Broken close")).when(writer).write(anyString());
 
-        assertThrows(ParserException.class, () -> underTest.writeLinesAsJsonl(writer, Collections.singletonList(TEST_OUTPUT_DATA)));
+        assertThrows(ParserException.class, () -> underTest.writeLinesAsJsonl(writer, List.of(TEST_OUTPUT_DATA)));
 
         verify(writer, never()).flush();
     }
